hello-kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - hosts:
    - webapp2.prod.com
    secretName: hello-kubernetes-tls
  rules:
  - host: "webapp2.prod.com"
    http:
      paths:
      - path: "/"
        backend:
          serviceName: webappreleasespringboot-postgres-k8s
          servicePort: 80
